# newVoiceIFramework

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/pages/: ChatPage.tsx  FlowBuilderPage.tsx  PipelinesPage.tsx  ProvidersPage.tsx  VoicePage.tsx
dashboard/src/stores/: chatStore.ts  (+2 more)
pipelines/examples/: content_generator.yaml  customer_support.yaml  data_enrichment.yaml  lead_qualifier.yaml  meeting_summarizer.yaml  multi_language_support.yaml  sentiment_monitor.yaml  simple_chatbot.yaml  voice_assistant.yaml
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  index.ts  types.ts  widget.ts
server/: config.py  dependencies.py  main.py  version.py
server/api/: admin.py  chat.py  connectors.py  pipelines.py  providers.py  voice.py
server/core/: conversation.py  engine.py  memory.py  router.py
server/model_server/: config_loader.py  pipeline.py
server/providers/: anthropic_provider.py  base.py  cohere_provider.py  google_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  registry.py  vllm_provider.py
server/storage/: database.py  models.py  repositories.py
server/utils/: auth.py  streaming.py
server/voice/: manager.py  push_to_talk.py  streaming.py
tests/: conftest.py
tests/test_api/: test_admin.py
tests/test_providers/: test_registry.py
(+36 files in other folders)
