[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicei-framework"
version = "0.1.0"
description = "LLM-powered interface framework with AI chat, voice, and visual pipeline builder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "redis>=5.2,<6",
    "httpx>=0.28,<1",
    "openai>=1.55,<2",
    "anthropic>=0.39,<1",
    "jinja2>=3.1,<4",
    "pyyaml>=6.0,<7",
    "python-multipart>=0.0.12",
    "websockets>=14,<15",
    "sse-starlette>=2.1,<3",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
voice = [
    "deepgram-sdk>=3.8,<4",
    "elevenlabs>=1.13,<2",
    "openai-whisper>=20240930",
    "soundfile>=0.12,<1",
]
all-providers = [
    "google-genai>=1.0,<2",
    "mistralai>=1.2,<2",
    "cohere>=5.11,<6",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-httpx>=0.34,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
